[package]
name = "cloudevents-sdk-actix-web"
version = "0.2.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
license-file = "../LICENSE"
edition = "2018"
description = "CloudEvents official Rust SDK - Actix-Web integration"
documentation = "https://docs.rs/cloudevents-sdk-actix-web"
repository = "https://github.com/cloudevents/sdk-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { version = "0.2.0", path = ".." }
actix-web = { version = "^3", default-features = false }
actix-rt = "^1"
async-trait = "^0.1.33"
lazy_static = "1.4.0"
bytes = "^0.5"
futures = "^0.3"

[dev-dependencies]
url = { version = "^2.1", features = ["serde"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }