[package]
name = "cloudevents-sdk-mqtt"
version = "0.2.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
license-file = "../LICENSE"
edition = "2018"
description = "CloudEvents official Rust SDK - Mqtt integration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { version = "0.2.0", path = ".." }
lazy_static = "1.4.0"
paho-mqtt = { path = "../../paho.mqtt.rust" }
chrono = { version = "^0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "^1.0"