[package]
name = "cloudevents-sdk-paho-mqtt"
version = "0.3.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
license-file = "../LICENSE"
edition = "2018"
description = "CloudEvents official Rust SDK - Mqtt integration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { version = "0.3.0", path = ".." }
lazy_static = "1.4.0"
paho-mqtt = "0.9.1"
chrono = { version = "^0.4", features = ["serde"] }
openssl-sys = "*"

[dev-dependencies]
serde_json = "^1.0"

[features]
vendored = ["openssl-sys/vendored"]