[package]
name = "cloudevents-sdk-rdkafka"
version = "0.1.0"
authors = ["Pranav Bhatt <adpranavb2000@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "CloudEvents official Rust SDK - Kafka integration"
documentation = "https://docs.rs/cloudevents-sdk-rdkafka"
repository = "https://github.com/cloudevents/sdk-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^0.5"
cloudevents-sdk = { version = "0.1.0", path = ".." }
lazy_static = "1.4.0"
rdkafka = "^0.23"
