[package]
name = "cloudevents-sdk-reqwest"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { path = ".." }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls"] }
lazy_static = "1.4.0"
bytes = "^0.5"
serde_json = "^1.0"
url = { version = "^2.1", features = ["serde"] }

[dev-dependencies]
mockito = "0.25.1"
tokio = { version = "^0.2", features = ["full"] }