[package]
name = "cloudevents-sdk-reqwest"
version = "0.3.1"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
license-file = "../LICENSE"
edition = "2018"
description = "CloudEvents official Rust SDK - Reqwest integration"
documentation = "https://docs.rs/cloudevents-sdk-reqwest"
repository = "https://github.com/cloudevents/sdk-rust"
readme = "README.md"
categories = ["web-programming", "encoding", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.33"
cloudevents-sdk = { path = ".." }
lazy_static = "1.4.0"
bytes = "^1.0"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
mockito = "0.25.1"
tokio = { version = "^1.0", features = ["full"] }
url = { version = "^2.1" }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
version-sync = "^0.9"