[package]
name = "actix-web-example"
version = "0.3.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

[dependencies]
cloudevents-sdk = { path = "../..", features = ["actix"] }
actix-web = "4.0.0-beta.19"
actix-cors = "0.6.0-beta.8"
serde_json = "^1.0"
url = { version = "^2.1" }
env_logger = "0.7.1"
