[package]
name = "actix-web-example"
version = "0.3.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

[dependencies]
cloudevents-sdk = { path = "../..", features = ["actix"] }
actix-web = "4"
actix-cors = "^0.7"
serde_json = "^1.0"
url = { version = "^2.1" }
env_logger = "^0.11"
