[package]
name = "fe2o3-amqp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { path = "../..", features = ["fe2o3-amqp"] }
fe2o3-amqp = "0.5.1"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread"] }
serde_json = "1"