[package]
name = "tide-example"
version = "0.1.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { path = "../.." }
cloudevents-sdk-tide = { path = "../../cloudevents-sdk-tide" }
tide = { version = "0.16" }
async-std = { version = "1", features = ["attributes"] }
tide-websockets = "0.3.0"
futures-util = "0.3.8"
serde_json = "1.0.64"
chrono = { version = "^0.4", features = ["serde"] }

[workspace]
