[package]
name = "wasi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cloudevents-sdk = { path = "../..", features = ["http-binding", "hyper_wasi", "hyper" ] }
hyper_wasi = { version = "0.15", features = ["full"] }
log = "0.4.21"
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
serde_json = " 1.0.116"

[dev-dependencies]
bytes = "1.6.0"
http-body-util = "0.1.1"
chrono = "*"