[package]
name = "wasi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cloudevents-sdk = { path = "../..", features = ["http-0-2-binding", "hyper_wasi", "hyper-0-14" ] }
hyper_wasi = { version = "0.15", features = ["full"] }
log = "0.4.21"
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
serde_json = "^1.0"

[dev-dependencies]
bytes = "1.6.0"
http-body-util = "0.1.1"
chrono = "*"